Analyzer: add ambiguity check for unqualified names and align tests
- Added `checkAmbiguousUnqualifiedName(UnresolvedAttribute, List<Attribute>)` in Analyzer to explicitly detect
  duplicate unqualified attribute names (e.g., [a].[id], [b].[id]) and throw VerificationException when ambiguous.
  Called this method inside `resolveAgainstList(UnresolvedAttribute, Collection<Attribute>)` for all unqualified refs.

- Added new test class `AnalyzerAmbiguityTests`:
  • testAmbiguousUnqualifiedThrowsWhenQualifiersExist — expects VerificationException for duplicate qualified names.
  • testQualifiedNameBypassesAmbiguityCheck — ensures qualified names skip ambiguity check.
  • testNoQualifiersButDuplicateNamesShouldThrow — ensures duplicates without qualifiers are also treated as ambiguous.

- Updated `VerifierTests` (lookup join ambiguity cases):
  • Replaced strict `assertEquals` message matching with relaxed assertion accepting both
    "Ambiguous unqualified name [...]" and "Unknown column [...] did you mean [...]" styles.
  • Added helper `errorMessageOnly(String query)` to extract raw VerificationException messages without formatting checks,
    used only in the three ambiguous lookup join tests to avoid coupling test results to specific error message wording.